--- a/styles/style.scss
+++ b/styles/style.scss
@@ -332,6 +332,21 @@ a:link
      }
    }
 
+    @media only screen and (max-width: 600px) {
+    .header {
+      margin-top: 10px;
+      h1 {
+          
+          font-size: 25px;
+      }
+  
+   h2 {
+      font-size: 25px;
+   }
+   
+   }
+  }
+
    @media only screen and (max-width: 500px) {
     .header {
       margin-top: 10px;
@@ -363,7 +378,7 @@ a:link
 
 .button2 {
   margin-left: 1px;
-  padding: 10px 10px 6px 10px;
+  padding: 12px 10px 12px 10px;
 }
 
 .tools {
