--- a/styles/style.css
+++ b/styles/style.css
@@ -380,6 +380,21 @@ a:link {
   }
 }
 
+@media only screen and (max-width: 600px) {
+    .header {
+      margin-top: 10px;
+      h1 {
+          
+          font-size: 25px;
+      }
+  
+   h2 {
+      font-size: 25px;
+   }
+   
+   }
+  }
+
 @media only screen and (max-width: 500px) {
   .header {
     margin-top: 10px;
@@ -412,7 +427,7 @@ a:link {
   }
   .buttons .button2 {
     margin-left: 1px;
-    padding: 10px 10px 6px 10px;
+    padding: 12px 10px 12px 10px;
   }
   .buttons .tools {
     margin-right: 15px;
